Fix variables overlapping issue

--- a/style.css
+++ b/style.css
@@ -58,7 +58,9 @@ body {
   backdrop-filter: blur(10px);
 }
 
-.modal-backdrop {
+/* Pop up class */
+
+.modal-background {
   background: #c1c7d0;
   position: fixed;
   mix-blend-mode: multiply;
@@ -75,8 +77,8 @@ body {
   position: fixed;
   padding: 16px;
   align-items: center;
-  width: 100%;
-  height: 90vh;
+  width: 50%;
+  height: 50%;
   background-color: #fff;
   border: 1px solid #dfe1e6;
   box-sizing: border-box;
